<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>components_py</name>
  <version>0.0.0</version>
  <description>My python components package</description>
  <maintainer email="guibeal@guibeal.com">beal</maintainer>
  <license>Unlicensed</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>